--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
     <img class="car-photo" src="assets/images/carphoto1920.jpg">
   </div>
 
-  <button pButton pRipple type="button" routerLink="/login" routerLinkActive="active"
+  <button pButton pRipple type="button" (click)="notShow()" routerLink="/login" routerLinkActive="active"
           label="{{'HOME.SIGN' | translate}}"
           class="p-button-raised p-button-success button-sign"></button>
 </div>
@@ -66,7 +66,7 @@
               <p-button (click)="showDialog(cars.id)" type="button"
                         styleClass="p-button-success button-rent button-scroll"
                         label="{{'HOME.BUTTONREN' | translate}}"></p-button>
-              <p-button type="button" label="..." routerLink="/register/{{cars.id}}" routerLinkActive="active"
+              <p-button type="button" label="..." (click)="notShow()" routerLink="/register/{{cars.id}}" routerLinkActive="active"
                         styleClass="p-button-warning button-rent button-scroll"
                         style="position: absolute;   margin-left: 1%;"
                         pTooltip="{{'HOME.MORE' | translate}}"
