--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -250,8 +250,10 @@
   cursor: pointer;
 }
 .photos ::ng-deep .p-galleria .p-galleria-thumbnail-container {
+  //background: rgba(0, 0, 0, 0.9);
+  //padding: 1rem 1.8rem;
   background: rgba(0, 0, 0, 0.9);
-  padding: 1rem 1.3rem;
+  padding: 1rem 1.8rem;
+  width: 100%;
+  height: 87px;
 }
-
-
