--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,12 +5,15 @@
   @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 </style>
+
 <div>
   <div class="blockk">
     <a class="log-logo">{{'HOME.SMOTRA'| translate}}</a>
-    <a class="text-geo"><br>{{'HOME.VITEBSK' | translate}} <br>{{'HOME.ADDRESS' | translate}}</a>
-    <a class="text-phone">{{'HOME.TEL'| translate}}</a>
+    <a *ngIf="userid == null" class="text-geo"><br>{{'HOME.VITEBSK' | translate}} <br>{{'HOME.ADDRESS' | translate}}</a>
+    <a *ngIf="userid == null" class="text-phone">{{'HOME.TEL'| translate}}</a>
+    <li *ngIf="userid != null" class="login-name">{{userLogin.login}}</li>
     <div>
       <button class="lang-icon" (click)="useLanguage('ru')"
               pTooltip="{{'ADMIN.RUSSIA' | translate}}"
@@ -27,14 +30,20 @@
       <p-messages [(value)]="messages" [enableService]="true" [closable]="true"></p-messages>
     </div>
     <img class="site-logo" src="assets/images/logo.png">
-    <img class="logo-geo" src="assets/images/geo.png">
-    <img class="logo_phone" src="assets/images/phone.png">
+    <img *ngIf="userid == null" class="logo-geo" src="assets/images/geo.png">
+    <img *ngIf="userid == null" class="logo_phone" src="assets/images/phone.png">
     <img class="car-photo" src="assets/images/carphoto1920.jpg">
   </div>
 
-  <button pButton pRipple type="button" (click)="notShow()" routerLink="/login" routerLinkActive="active"
+  <button *ngIf="userid == null" pButton pRipple type="button" (click)="notShow()" routerLink="/login"
+          routerLinkActive="active"
           label="{{'HOME.SIGN' | translate}}"
           class="p-button-raised p-button-success button-sign"></button>
+
+  <p-button *ngIf="userid != null" label="{{'ADMIN.EXIT'|translate}}" class="button--exit"
+            styleClass="p-button-raised p-button-danger" (click)="clear()"></p-button>
+  <p-button *ngIf="userid != null" label="{{'HOME.MYORDER' | translate}}" class="button--myorder"
+            styleClass="p-button-raised" (click)="myOrder()"></p-button>
 </div>
 <div>
 
@@ -59,14 +68,17 @@
         <div class="product-item-content">
           <img class="img-scroll" src="http://localhost:8080/downloadFile/{{cars.image}}">
           <div>
-            <h4 class="mb-1 text-scroll">{{cars.name}}</h4>
+            <h4 class="mb-1 text-scroll">{{cars.namecars}}</h4>
             <h4 class="mb-1 text-scroll-sec">{{cars.model}}</h4>
             <h6 class="mt-0 mb-3 text-scroll-price">${{cars.price}}</h6>
             <div class="car-buttons mt-5 button-scroll">
-              <p-button (click)="showDialog(cars.id)" type="button"
+              <p-tag *ngIf="cars.status == true" class="warning" icon="pi pi-times" severity="danger"
+                     value="{{'CARLIST.WARNING'|translate}}"></p-tag>
+              <p-button *ngIf="cars.status != true" (click)="showDialog(cars.id)" type="button"
                         styleClass="p-button-success button-rent button-scroll"
                         label="{{'HOME.BUTTONREN' | translate}}"></p-button>
-              <p-button type="button" label="..." (click)="notShow()" routerLink="/register/{{cars.id}}" routerLinkActive="active"
+              <p-button *ngIf="cars.status != true" type="button" label="..." (click)="register(cars.id)"
+                        routerLinkActive="active"
                         styleClass="p-button-warning button-rent button-scroll"
                         style="position: absolute;   margin-left: 1%;"
                         pTooltip="{{'HOME.MORE' | translate}}"
@@ -86,24 +98,12 @@
       <p class="title-dialog-sec">
         {{'HOME.TITLEFIR'|translate}}
       </p>
-      <form [formGroup]="Form" (ngSubmit)="submit()">
-        <input formControlName="login" type="text" pInputText class="input-login"
-               placeholder="{{'LOGIN.LOGIN'|translate}}" style="position: absolute;" required
-               [ngClass]="{ 'is-invalid': submitted && f['login'].errors }"/>
-        <div *ngIf="submitted && f['login'].errors" class="invalid-feedback red-error-log">
-          <div *ngIf="f['login'].errors['required']">*</div>
-        </div>
-        <input formControlName="password" type="password"
-               class="p-inputtext p-component p-element p-password-input input-password"
-               placeholder="{{'LOGIN.PASSWORD'|translate}}" required
-               [ngClass]="{ 'is-invalid': submitted && f['password'].errors }"/>
-        <div *ngIf="submitted && f['password'].errors" class="invalid-feedback red-error-pas">
-          <div *ngIf="f['password'].errors['required']">*</div>
-        </div>
-        <p-button type="submit" styleClass="p-button-success button-sub button-scroll"
-                  label="{{'HOME.SUBMIT'|translate}}"
-                  style="position: absolute;margin-top: 30%;margin-left: 39%;"></p-button>
-      </form>
+      <p class="title-dialog-sec">
+        {{'HOME.TITLEFOR'|translate}}
+      </p>
+      <p-button class="buton--Registr button--widht" label="{{'HOME.REGISTR'| translate}}" (click)="nextRegistration()"></p-button>
+      <p-button label="{{'HOME.SIGN'| translate}}" class="buton--SignIn button--widht" styleClass="p-button-raised"
+                (click)="nextLogin()"></p-button>
     </p-dialog>
   </div>
 
